# itis_table_parse

./: .gitignore  README.md  pyproject.toml
src/: .env.example  classes.py  config.py  main.py  parser.py
